# calibcircle

./: CMakeLists.txt  calibration.py  config_file.xml  convert2gray.py  main.cpp  rename.py  test.cpp
images/: config.xml
include/: CameraCalib.h  settings.h
src/: CameraCalib.cpp  settings.cpp
